--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <main class="countainer">
-<h1>Example Website</h1>
-<p>これはWebサイトです！</p>
+<h1>Megumi</h1>
+<p></p>
 <ul>
-    <li><a href="https://www.google.com/">Google</a></li>
+    <li><a href="https://jozankei.jp/kappon/">定山渓温泉ＰＲ隊長 かっぽんくん</a></li>
     <li><a href="https://www.yahoo.co.jp/">Yahoo!Japan</a></li>
 </ul>
 
-<img src="computer01_smile.png" alt="笑顔のコンピューター">
+<img src="self_image.jpeg" alt="自己紹介写真" width="200" height="auto">
 </main>
 </body>
 </html>
