--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1>Megumi</h1>
 <p></p>
 <ul>
-    <li><a href="https://jozankei.jp/kappon/">定山渓温泉ＰＲ隊長 かっぽんくん</a></li>
-    <li><a href="https://www.yahoo.co.jp/">Yahoo!Japan</a></li>
+    <li>海の近くに住んでます。</li>
+    <li>画像は<a href="https://jozankei.jp/kappon/">定山渓温泉ＰＲ隊長 かっぽんくん</a></li>
 </ul>
 
 <img src="self_image.jpeg" alt="自己紹介写真" width="200" height="auto">
