--- a/poke.html
+++ b/poke.html
@@ -16,6 +16,10 @@
       margin-top: 10px;
       font-size: 1.2em;
     }
+
+    #battleButton {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -26,60 +30,83 @@
   <div id="pokemon">
     <h2 id="pokemonName"></h2>
     <img id="pokemonImage" src="">
-    <p id="pokemonWeight"></p> <!-- ここで重さを表示 -->
+    <p id="pokemonWeight"></p>
+    <p id="pokemonStats"></p> <!-- 追加: ポケモンのステータス表示 -->
+  </div>
+
+  <button id="battleButton">戦う</button> <!-- 戦うボタン -->
+
+  <div id="strongerPokemon">
+    <h2>強いポケモン</h2>
+    <h3 id="strongerPokemonName"></h3>
+    <img id="strongerPokemonImage" src="">
+    <p id="strongerPokemonWeight"></p>
+    <p id="strongerPokemonStats"></p>
   </div>
 </main>
 
 <script>
-  // ポケモンの名前を表示する要素を取得
   let pokemonName = document.getElementById('pokemonName');
-
-  // ポケモンの画像を表示する要素を取得
   let pokemonImage = document.getElementById('pokemonImage');
-
-  // ポケモンの重さを表示する要素を取得
   let pokemonWeight = document.getElementById('pokemonWeight');
+  let pokemonStats = document.getElementById('pokemonStats');
+  let battleButton = document.getElementById('battleButton');
+  
+  let strongerPokemonName = document.getElementById('strongerPokemonName');
+  let strongerPokemonImage = document.getElementById('strongerPokemonImage');
+  let strongerPokemonWeight = document.getElementById('strongerPokemonWeight');
+  let strongerPokemonStats = document.getElementById('strongerPokemonStats');
 
-  // ポケモンは現在898種
   let pokemonNumber = Math.floor(Math.random() * 898) + 1;
+  let currentPokemonStats = [];
 
-  // PokéAPIからデータを取得し、名前、画像、重さを表示
-  fetch(`https://pokeapi.co/api/v2/pokemon/${pokemonNumber}`)
-    .then(function (response) {
-      // レスポンスをコンソールに出力
-      console.log(response);
+  // ポケモンデータを取得
+  function getPokemonData(pokemonId) {
+    fetch(`https://pokeapi.co/api/v2/pokemon/${pokemonId}`)
+      .then(response => response.json())
+      .then(data => {
+        // ポケモンの名前
+        fetch(data.species.url)
+          .then(response => response.json())
+          .then(speciesData => {
+            pokemonName.textContent = speciesData.names.find(name => name.language.name === "ja").name;
+          });
 
-      // JSONデータを取得して次の .then() に渡す
-      return response.json();
-    })
-    .then(function(data) {
-      // JSONデータをコンソールに出力
-      console.log(data);
+        // ポケモンの画像
+        pokemonImage.src = data.sprites.front_default;
 
-      // ポケモンの名前を取得（日本語名を取得するためにspeciesエンドポイントを呼び出す）
-      fetch(data.species.url)
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(speciesData) {
-          // 日本語名を取得して表示
-          pokemonName.textContent = speciesData.names.find(name => name.language.name === "ja").name;
-        })
-        .catch(function(error) {
-          console.error(`日本語名の取得中にエラーが発生しました: ${error}`);
-        });
+        // ポケモンの重さ
+        let weightInKg = data.weight / 10;
+        pokemonWeight.textContent = `重さ: ${weightInKg} kg`;
 
-      // ポケモンの画像を表示
-      pokemonImage.src = data.sprites.front_default;
+        // ポケモンのステータス
+        let stats = data.stats;
+        let totalStats = stats.reduce((sum, stat) => sum + stat.base_stat, 0);
+        pokemonStats.textContent = `ステータス合計: ${totalStats}`;
 
-      // ポケモンの重さを表示（ヘクタール単位で、kgに変換して表示）
-      let weightInKg = data.weight / 10; // ヘクタール単位なので10で割ってkgに変換
-      pokemonWeight.textContent = `重さ: ${weightInKg} kg`;
-    })
-    .catch(function(error) {
-      // エラーが発生した場合はコンソールに出力
-      console.error(`エラーが発生しました:${error}`);
-    });
+        // 現在のポケモンのステータスを保存
+        currentPokemonStats = { totalStats, id: pokemonId, stats };
+      })
+      .catch(error => console.error('エラーが発生しました:', error));
+  }
+
+  // 初回にランダムなポケモンを表示
+  getPokemonData(pokemonNumber);
+
+  // 戦うボタンがクリックされた時の処理
+  battleButton.addEventListener('click', () => {
+    let strongerPokemonId = getStrongerPokemonId(currentPokemonStats.totalStats);
+    getPokemonData(strongerPokemonId);
+  });
+
+  // より強いポケモンを取得する関数
+  function getStrongerPokemonId(currentTotalStats) {
+    // ここでは単純に現在のポケモンよりステータス合計が大きいポケモンを探す
+    // ポケモン番号を+1して、強いポケモンを取得（実際にはAPIでポケモン番号で強さを決めるのは難しい）
+    let strongerPokemonId = currentTotalStats + 1;
+    if (strongerPokemonId > 898) strongerPokemonId = 1;  // もしポケモン番号が898を超えたら1に戻す
+    return strongerPokemonId;
+  }
 </script>
 
 </body>
