--- a/sample.html
+++ b/sample.html
@@ -41,7 +41,8 @@
 <!-- 仕事についてセクション -->
 <section class="section">
   <h2>仕事について</h2>
-  <p>ホテルや観光自治体向けのSaaSサービスを開発している会社でカスタマーサクセスマネージャーとして働いています！</p>
+  <p>会社：ホテルや観光自治体向けのSaaSサービスを開発している会社</p>
+  <p></p>職種：カスタマーサクセスマネージャーとして働いています！</p>
   <div class="details">
     <div>
       <h3>勤続年数</h3>
